# hpc-exercises

./: .gitignore  CMakeLists.txt  README.md
error1/: CMakeLists.txt  error1.c
error2/: CMakeLists.txt  main.c
gameoflife/: CMakeLists.txt  gameoflife.c  main.c
gameoflife-mpi/: CMakeLists.txt  main.c  makefile
hello-world/: CMakeLists.txt  hello-world.c  main.c
parallestack/: CMakeLists.txt
philosophen/: .gitignore  CMakeLists.txt
pi/: CMakeLists.txt  main.c  pi.c
